Fixed the flash transition from light to dark mode when page loads

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --background: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #111827;
+  }
+}
+
+body {
+  background: var(--background);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
